--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-opencv-python==4.5.5.62
-numpy==1.23.3
-pygetwindow==0.0.9
-psutil==5.9.0
-keyboard==0.13.5
-pywin32==304
-mss==6.1.0
-yolov5==6.1.0
-rich==10.15.2
+opencv-python
+numpy
+pygetwindow
+psutil
+keyboard
+pywin32
+mss
+yolov5
+rich
